--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-
-
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -8,9 +5,8 @@
 <link rel="stylesheet" type="text/css" href="./css/1.css">
 <div id="doc" class="container-fluid markdown-body comment-enabled" data-hard-breaks="true">
 <meta name="twitter:card" content="summary" />
-
+<link rel="icon" type="image/x-icon" href="./image/favicon.ico">
 <title> @thekingofcool's qqzone </title>
-<link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
 <br>
