--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <link rel="stylesheet" type="text/css" href="./css/1.css">
 <div id="doc" class="container-fluid markdown-body comment-enabled" data-hard-breaks="true">
 <meta name="twitter:card" content="summary" />
-<link rel="icon" type="image/x-icon" href="./image/favicon.ico">
 <title> @thekingofcool's qqzone </title>
+<link rel="stylesheet" type="text/css" href="./css/styles.css">
 </head>
 <body>
 <br>
