--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <br>
-<center><h1 style="border-bottom:0px"> @thekingofcool's qqzone </h1></center>
+<center><h1 style="border-bottom:0px"> <a href="./me/about_me.html"> @thekingofcool's qqzone</a> </h1></center>
 <p>这是一个奇妙的时代，我们比以往任何时候都更容易接入互联网，通过一根网线，有了可以无限传递信息的可能。</p>
 <p>当然这不是当下以及未来信息传递的唯一方式，但也足够令人兴奋。</p>
 <p>我们正处在以几十年为尺度的周期临界点，或者是主观上hopefully。我们无法左右经济与政治周期，能做的只是永远拥抱变革，积极探索那些可能改变人们生活方式的新事物并投身建设它们，让我们不算太长的旅程有一点意思。</p>
