change english name

--- a/me/about_me.html
+++ b/me/about_me.html
@@ -15,7 +15,7 @@
 <p>thekingofcool.eth;</p>
 <p>前建筑结构工程师（2016-2017），现大数据开发工程师（2018-今），业余独立开发；</p>
 <p>赛博朋克，摇滚，拳击，马拉松，Decentralize Everything；</p>
-<p>Fan of 崔健、帕奎奥、马斯克；</p>
+<p>Fan of 崔健、Manny Pacquiao、Elon Musk；</p>
 <p>
 现在在做的事：
 <ul>
