--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<meta name="description" content="How's that working out for you?">
-<link rel="shortcut icon" href="./image/favicon.ico" type="image/x-icon">
-<link rel="icon" href="./image/favicon.ico" />
+<meta charset="UTF-8" />
+<meta name="description" itemprop="description" content="How's that working out for you?" />
+<meta content="dark light" name="color-scheme" />
+<link rel="icon" href="https://thekingof.cool/image/favicon.ico" />
 <link rel="me" href="https://mastodon.social/@thekingofcool">
 <title> thekingofcool's qqzone </title>
 </head>
