add fixed background image

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 <link rel="icon" href="https://thekingof.cool/image/favicon.ico" />
 <link rel="me" href="https://mastodon.social/@thekingofcool">
 <title> thekingofcool's qqzone </title>
+<style>
+body {
+    background-image: url("https://thekingof.cool/image/discussing-the-divine-comedy-with-dante.jpg");
+    background-attachment: fixed;
+}
+</style>
 </head>
 <body>
 <br>
