--- a/index.html
+++ b/index.html
@@ -11,6 +11,25 @@
 body {
     background-image: url("https://thekingof.cool/image/discussing-the-divine-comedy-with-dante.jpg");
     background-attachment: fixed;
+	background-size: cover;
+}
+
+p {
+	color: white;
+	font-size: 24 px;
+	font-family: Arial, Helvetica, sans-serif;
+	text-align: justify;
+	text-stroke: 1px black;
+	z-index: 1;
+}
+
+li {
+	color: white;
+	font-size: 20 px;
+	font-family: Arial, Helvetica, sans-serif;
+	text-align: justify;
+	text-stroke: 1px black;
+	z-index: 1;
 }
 </style>
 </head>
