--- a/me/about_me.html
+++ b/me/about_me.html
@@ -8,6 +8,12 @@
 <link rel="icon" href="https://thekingof.cool/image/favicon.ico" />
 <title> thekingofcool's qqzone </title>
 <div id="doc" class="container-fluid markdown-body comment-enabled" data-hard-breaks="true">
+<style>
+body {
+    background-image: url("https://thekingof.cool/image/about_me.jpg");
+    background-attachment: fixed;
+}
+</style>
 </head>
 <body>
 <br>
