update background image

--- a/index.html
+++ b/index.html
@@ -9,28 +9,27 @@
 <title> thekingofcool's qqzone </title>
 <style>
 body {
-    background-image: url("https://thekingof.cool/image/discussing-the-divine-comedy-with-dante.jpg");
+    background: linear-gradient(rgba(255,255,255,0.5),rgba(255,255,255,0.1)),url("https://thekingof.cool/image/discussing-the-divine-comedy-with-dante.jpg");
     background-attachment: fixed;
-	background-size: cover;
+    background-size: cover;
+}
+a:link {
+  color: white;
+  text-decoration: underline;
+}
+a:visited {
+  color: white;
+  text-decoration: underline;
+}
+a:hover {
+  color: red;
+  text-decoration: underline;
+}
+a:active {
+  color: yellow;
+  text-decoration: underline;
 }
 
-p {
-	color: white;
-	font-size: 24 px;
-	font-family: Arial, Helvetica, sans-serif;
-	text-align: justify;
-	text-stroke: 1px black;
-	z-index: 1;
-}
-
-li {
-	color: white;
-	font-size: 20 px;
-	font-family: Arial, Helvetica, sans-serif;
-	text-align: justify;
-	text-stroke: 1px black;
-	z-index: 1;
-}
 </style>
 </head>
 <body>
