update background image

--- a/me/about_me.html
+++ b/me/about_me.html
@@ -10,8 +10,28 @@
 <div id="doc" class="container-fluid markdown-body comment-enabled" data-hard-breaks="true">
 <style>
 body {
-    background-image: url("https://thekingof.cool/image/about_me.jpg");
+    background: linear-gradient(rgba(255,255,255,0.5),rgba(255,255,255,0.1)),url("https://thekingof.cool/image/about_me.jpg");
     background-attachment: fixed;
+	background-size: 400px 750px;
+}
+a:link {
+  color: white;
+  text-decoration: underline;
+}
+
+a:visited {
+  color: white;
+  text-decoration: underline;
+}
+
+a:hover {
+  color: red;
+  text-decoration: underline;
+}
+
+a:active {
+  color: yellow;
+  text-decoration: underline;
 }
 </style>
 </head>
