--- a/me/about_me.html
+++ b/me/about_me.html
@@ -10,7 +10,7 @@
 <div id="doc" class="container-fluid markdown-body comment-enabled" data-hard-breaks="true">
 <style>
 body {
-    background: linear-gradient(rgba(255,255,255,0.5),rgba(255,255,255,0.1)),url("https://thekingof.cool/image/about_me.jpg");
+    background: url("https://thekingof.cool/image/about_me.jpg");
     background-attachment: fixed;
 	background-size: 400px 750px;
 }
