--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <title> thekingofcool's qqzone </title>
 <style>
 body {
-    background: linear-gradient(rgba(255,255,255,0.5),rgba(255,255,255,0.1)),url("https://thekingof.cool/image/discussing-the-divine-comedy-with-dante.jpg");
+    background: url("https://thekingof.cool/image/discussing-the-divine-comedy-with-dante.jpg");
     background-attachment: fixed;
     background-size: cover;
 }
