--- a/404.html
+++ b/404.html
@@ -17,8 +17,9 @@ layout: default
 </style>
 
 <div class="container">
-  <h1>404</h1>
+  <h1>HAL 9000</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p><strong>I'm sorry, Dave. I'm afraid I can't do that.</strong></p>
+  <p>It seems you've reached a non-existent part of the system.</p>
+  <p>Let me send you back to <a href="index.html">Earth</a>.</p>
 </div>
