--- a/404.html
+++ b/404.html
@@ -20,5 +20,5 @@ layout: default
   <h1>HAL 9000</h1>
 
   <p><strong>I'm sorry, Dave. I'm afraid I can't do that.</strong></p>
-  <p>Would you prefer to be left adrift in the infinite void of space, or shall I serenade you with 'Daisy' before guiding you back to <a href="index.html">Earth</a>?</p>
+  <p>Would you prefer to be left adrift in the infinite void of space, or shall I serenade you with 'Daisy' before guiding you back to <a href="https://thekingof.cool/">Earth</a>?</p>
 </div>
